// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sx5guaa {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sx5guaa :visited {
  color: var(--colors-primary500);
}

.sx5guaa:focus,
.sx5guaa:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sx5guaa :active {
  color: var(--colors-primary500);
}

.sx5guaaido38--size-md {
  font-size: var(--fontSizes-md);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

<div>
  <a
    class="sx5guaa sx5guaaido38--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sx5guaa {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sx5guaa :visited {
  color: var(--colors-primary500);
}

.sx5guaa:focus,
.sx5guaa:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sx5guaa :active {
  color: var(--colors-primary500);
}

.sx5guaaido38--size-md {
  font-size: var(--fontSizes-md);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

.sx5guaa6hfh9--size-lg {
  font-size: var(--fontSizes-lg);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

<div>
  <a
    class="sx5guaa sx5guaa6hfh9--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
